Fixed an issue where the MainContainer div was too tall, forcing scrollbars to appear.

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #010409
+  background-color: #010409;
+  width: 100vw;
 }
 
 code {
